Fixed Table Button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -658,7 +658,7 @@ input#saveForm {
 			</div>
 
 			<div class="fade-in one">
-				<h1>Built to Optimize Your Event Marketing</h1>
+				<h1>Optimize Your Event Marketing</h1>
 			</div>
 
 			<h2 class="subtitle fade-in two">The best way to <strong>improve</strong> your <br>events and sell <strong>more</strong> tickets.</h2>
