Fixed Table Button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -689,7 +689,7 @@ input#saveForm {
           <div class="step">
             <div class="counter"><span>1.</span> Create</div>
           
-            <p>We securely connect your <a href="https://stripe.com/" target="_blank">Stripe</a> account to our system.</p>
+            <p>Create your event your </p>
           </div>
         </div>
         <div class="medium-4 small-10 small-centered medium-uncentered columns text-center">
@@ -1123,7 +1123,7 @@ input#saveForm {
 				</div>
 				<div class="medium-6 columns text-left">
 					<h4>Who owns my data?</h4>
-					<p>You, of course. It’s your data after all. We want you to use LeadSquared, because you love using it, not because we have held your data “hostage”. You can export all your lead data, email campaign reports & landing page reports from LeadSquared whenever you want.</p>
+					<p>You, of course. It’s your data after all. We want you to use EventNinja, because you love using it, not because we have held your data “hostage”. You can export all your lead data, email campaign reports & landing page reports from EventNinja whenever you want.</p>
 				</div>
 				<div class="medium-6 columns text-left">
 					<h4>Can I upgrade or downgrade my subscription?</h4>
