Fixed Table Button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -601,6 +601,7 @@ input#saveForm {
   font-weight: bold;
 }
 
+
 </style>
 
 <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
@@ -677,7 +678,7 @@ input#saveForm {
       <!-- p>We weren't kidding about the "<em>one click</em>" thing.</p -->
 
       <div class="row">
-        <div class="medium-10 medium-centered columns">
+        <div class="medium-11 medium-centered columns how">
           <p>If the foundation of your events is people, then shouldn't the foundation of your analytics data be people, too?</p>
           <!-- p>EasyRetention is like a smarter assistent you can delegate this boring task to. Turn on the autopilot for your business and automate time-consuming with minimum effort.</p -->
           <p>Rather focusing on analysing basic ticket sales, EventNinja <strong>measures the people</strong> who attend your events.</p>
@@ -688,21 +689,21 @@ input#saveForm {
         <div class="medium-4 small-10 small-centered medium-uncentered columns text-center">
           <div class="step">
             <div class="counter"><span>1.</span> Create</div>
-          
-            <p>Create your event your </p>
+            <i class="fa fa-plus-circle fa-4x"></i>
+            <p>Create your own beautiful, mobile-responsive event site.</p>
           </div>
         </div>
         <div class="medium-4 small-10 small-centered medium-uncentered columns text-center">
           <div class="step down">
-            <div class="counter"><span>2.</span> Measure</div>
-     
-            <p>You create targeted emails & choose the triggers.</p>
+            <div class="counter"><span>2.</span> Promote</div>
+            <i class="fa fa-bullhorn fa-4x"></i>
+            <p>Promote your event with our easy ticketing solution or site widget.</p>
           </div>
         </div>
         <div class="medium-4 small-10 small-centered medium-uncentered columns text-center">
           <div class="step">
           <div class="counter"><span>3.</span> Learn</div>
-
+            <i class="fa fa-lightbulb-o fa-4x"></i>
             <p>We make sure to send the right email at the right at time.</p>
           </div>
         </div>
