Fixed Table Button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -695,16 +695,16 @@ input#saveForm {
         </div>
         <div class="medium-4 small-10 small-centered medium-uncentered columns text-center">
           <div class="step down">
-            <div class="counter"><span>2.</span> Promote</div>
-            <i class="fa fa-bullhorn fa-4x"></i>
-            <p>Promote your event with our easy ticketing solution or site widget.</p>
+            <div class="counter"><span>2.</span> Learn</div>
+             <i class="fa fa-lightbulb-o fa-4x"></i>
+            <p>Promote your event and identify data trends that contribute to your bottom line.</p>
           </div>
         </div>
         <div class="medium-4 small-10 small-centered medium-uncentered columns text-center">
           <div class="step">
-          <div class="counter"><span>3.</span> Learn</div>
-            <i class="fa fa-lightbulb-o fa-4x"></i>
-            <p>We make sure to send the right email at the right at time.</p>
+          <div class="counter"><span>3.</span> Take Action</div>
+            <i class="fa fa-line-chart fa-4x"></i>
+            <p>Measure the success of your events to ensure your next event is even better.</p>
           </div>
         </div>
       </div>
