Fixed Table Button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -709,12 +709,10 @@ input#saveForm {
         </div>
       </div>
 
-      <h2>Examples</h2>
-
-      <p>Send email <strong>X</strong> when customers unsubscribe from Plan <strong>PRO</strong>.</p>
-      <p>Send email <strong>Y</strong> when customers unsubscribe after <strong>6+ months</strong>.</p>
-      <p>Send email <strong>Z</strong> when customers have spent <strong> more than $1000.</strong>.</p>
-
+      <h2>What can I do differently do?</h2>
+      <p>Show me people who came to <strong>event 2</strong>, then came to <strong>event 6</strong>.</p>
+      <p>Show me people who have <strong>"XYZ"</strong> interests, background, <strong>X</strong> money spent, <strong>X</strong> ticket purchased email etc.</p>
+      <p>Show me which marketing channel produce the <strong>most valuable attendees.</strong></p>
     </div>
   </div>
 </div>
