Fixed Table Button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -601,6 +601,10 @@ input#saveForm {
   font-weight: bold;
 }
 
+.section.work {
+  padding-top: 0px;
+}
+
 
 </style>
 
@@ -669,7 +673,7 @@ input#saveForm {
 	</div>
 </div>
 
-<div class="section">
+<div class="section work">
   <div class="row">
     <div class="medium-11 medium-centered columns text-center">
 
