--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -713,7 +713,7 @@ input#saveForm {
         </div>
       </div>
 
-      <h2>What can I do differently do?</h2>
+      <h2>What can I do differently?</h2>
       <p>Show me people who came to <strong>event 2</strong>, then came to <strong>event 6</strong>.</p>
       <p>Show me people who have <strong>"XYZ"</strong> interests, background, <strong>X</strong> money spent, <strong>X</strong> ticket purchased email etc.</p>
       <p>Show me which marketing channel produce the <strong>most valuable attendees.</strong></p>
