Fixed Table Modal

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -663,7 +663,7 @@ input#saveForm {
 			</div>
 
 			<div class="fade-in one">
-				<h1>Optimize Your Event Marketing</h1>
+				<h1>Increase Your Event Signups</h1>
 			</div>
 
 			<h2 class="subtitle fade-in two">The best way to <strong>improve</strong> your <br>events and sell <strong>more</strong> tickets.</h2>
@@ -701,7 +701,7 @@ input#saveForm {
           <div class="step down">
             <div class="counter"><span>2.</span> Learn</div>
              <i class="fa fa-lightbulb-o fa-4x"></i>
-            <p>Promote your event and identify data trends that contribute to your bottom line.</p>
+            <p>Identify data trends that contribute to your bottom line.</p>
           </div>
         </div>
         <div class="medium-4 small-10 small-centered medium-uncentered columns text-center">
