--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>EventNinja pricing</title>
+  <title>EventNinja</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>EventNinja Pricing</title>
+  <title>EventNinja</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" media="all" href="assets/application-6391dd42ab241066df8be6b101f0c4b2769dbbb9e3edcc01811268b99662c7d5.css" data-turbolinks-track="true" />
   <script src="assets/application-744feb58c517097a41b7e0e121dd6e8316249f645d49af1e203d3164794489e5.js" data-turbolinks-track="true"></script>
