Fixed Table Modal

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1145,7 +1145,7 @@ input#saveForm {
 
 			<div class="row">	
 				<div class="medium-9 medium-centered columns">
-					<h2 class="subtitle"><strong>Start Improving Your Event Marketing Today</strong></h2>
+					<h2 class="subtitle"><strong>Increase Your Event Signups Today</strong></h2>
 				</div>
 			</div>
 <!--
