Fixed Table Modal

--- a/app/views/pages/thankyou.html.erb
+++ b/app/views/pages/thankyou.html.erb
@@ -1,8 +1,9 @@
 <style type="text/css">
 
 .section {
-  padding: 101px 0;
+  padding: 129px 0 0;
 }
+
 
 .section.first {
   background: url("/assets/texture3.jpg") repeat;
