Fixed Table Modal

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -807,7 +807,7 @@ input#saveForm {
 
 					<p>Visualise how often your attendees return and engage with your events.</p>
 
-					<p>Retention reports display attendees recurring behavior, but it can also show follow-up behavior. If two behaviors are related, then retention reports will show how often an attendee purchased a ticket then the other.</p>
+					<p>Retention reports display attendees recurring behavior, but it can also show follow-up behavior. If two behaviors are related, e.g. retention reports can show you when an attendee purchased a ticket from one event, then a ticket from an other.</p>
 
 				</div>
 
