Fixed Toggle Color

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -260,8 +260,8 @@ a:hover {
   -moz-border-radius: 20px;
   border-radius: 20px;
   border: 1px solid #d4d4d4;
-  width: 170px;
-  height: 34px;
+  width: 250px;
+  height: 50px;
   display: inline-block;
 }
 
@@ -515,8 +515,8 @@ a#hide {
   width: 50%;
   display: block;
   float: left;
-  height: 32px;
-  line-height: 32px;
+  height: 48px;
+  line-height: 49px;
   font-size: 15px;
   text-align: center;
   color: #a3a3a5;
@@ -527,7 +527,7 @@ a#toggle {
   display: block;
   float: left;
   height: 32px;
-  line-height: 32px;
+  line-height: 49px;
   font-size: 15px;
   text-align: center;
   color: #a3a3a5;
@@ -537,11 +537,11 @@ a#toggle2 {
   width: 50%;
   display: block;
   float: left;
-  height: 32px;
-  line-height: 32px;
+  height: 48px;
+  line-height: 49px;
   font-size: 15px;
   text-align: center;
-  color: #a3a3a5;
+  color: #000;
 }
 
 a#hide {
@@ -549,7 +549,7 @@ a#hide {
   border-radius: 20px;
   background-color: #edf3f9;
   font-weight: 700;
-  color: #76777f;
+  color: #000;
 }
 
 a.active {
@@ -565,7 +565,6 @@ a#toggle2 {
   border-radius: 20px;
   background-color: #edf3f9;
   font-weight: 700;
-  color: #76777f;
 }
 
 a#show {
@@ -573,7 +572,7 @@ a#show {
   display: block;
   float: right;
   height: 32px;
-  line-height: 32px;
+  line-height: 49px;
   font-size: 15px;
   text-align: center;
   color: #a3a3a5;
