Fixed Toggle Color

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -716,6 +716,7 @@ input#saveForm {
       <p>Show me people who came to <strong>event 2</strong>, then came to <strong>event 6</strong>.</p>
       <p>Show me people who have <strong>"XYZ"</strong> interests, background, <strong>X</strong> money spent, <strong>X</strong> ticket purchased email etc.</p>
       <p>Show me which marketing channel produce the <strong>most valuable attendees.</strong></p>
+      <p>Show me <strong>the total value I can expect to receive</strong> in the long term <strong>from previous attendee trends.</strong></p>
     </div>
   </div>
 </div>
