Fixed Toggle Color

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1093,10 +1093,14 @@ input#saveForm {
           </div>
     
     </div>
-    
 
       </div>
+
+
     </div>
+
+    <h2><strong>Want to talk to a human?</strong></h2><p>(UK)+44 7738 335778 or (UK)+44 7447 750486</p>
+
   </div>
 </div>
 
