Fixed Toggle Color

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -665,7 +665,7 @@ input#saveForm {
 				<h1>Increase Your Event Signups</h1>
 			</div>
 
-			<h2 class="subtitle fade-in two">The best way to <strong>improve</strong> your <br>events and sell <strong>more</strong> tickets.</h2>
+			<h2 class="subtitle fade-in two">The best way to <strong>improve</strong> your <br>marketing and sell <strong>more</strong> tickets.</h2>
 
 
 		</div>
