--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -924,7 +924,7 @@ input#saveForm {
             <ul>
               <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a> Manage up to <span>500</span> profiles</p></li>
               <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>1500</span> email credits</p></li>
-              <li><p><span>Custom</span> Url</p></li>
+              <li><p><a href="#" class="tooltip-top" data-tooltip="When you have a Custom URL, you can give people a short, easy-to-remember web address to find your events. (e.g. yourevent.eventninja.io)"><i class="fa fa-question-circle"></i></a> <span>Custom</span> Url</p></li>
             </ul>
           </div>
       
@@ -955,7 +955,7 @@ input#saveForm {
             <ul>
               <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a> Manage up to <span>5000</span> profiles</p></li>
               <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>15,000</span> email credits per month</p></li>
-              <li><p><span>Custom</span> Url</p></li>
+              <li><p><a href="#" class="tooltip-top" data-tooltip="When you have a Custom URL, you can give people a short, easy-to-remember web address to find your events. (e.g. yourevent.eventninja.io)"><i class="fa fa-question-circle"></i></a> <span>Custom</span> Url</p></li>
               <li><p><span>Remove</span> EventNinja Branding</p></li>
             </ul>
           </div>
@@ -1042,7 +1042,7 @@ input#saveForm {
                 <a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
                 Manage up to <span>1000</span> profiles</p></li>
                 <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>3000</span> email credits per month</p></li>
-                <li><p><span>Custom</span> Url</p></li>
+                <li><p><a href="#" class="tooltip-top" data-tooltip="When you have a Custom URL, you can give people a short, easy-to-remember web address to find your events. (e.g. yourevent.eventninja.io)"><i class="fa fa-question-circle"></i></a> <span>Custom</span> Url</p></li>
               </ul>
             </div>
         
@@ -1074,7 +1074,7 @@ input#saveForm {
                 <a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
                 Manage up to <span>7000</span> profiles</p></li>
                 <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>20,000</span> email credits per month</p></li>
-                <li><p><span>Custom</span> Url</p></li>
+                <li><p><a href="#" class="tooltip-top" data-tooltip="When you have a Custom URL, you can give people a short, easy-to-remember web address to find your events. (e.g. yourevent.eventninja.io)"><i class="fa fa-question-circle"></i></a> <span>Custom</span> Url</p></li>
                 <li><p><span>Remove</span> EventNinja Branding</p></li>
               </ul>
             </div>
