Fixed Toggle Color

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -712,11 +712,11 @@ input#saveForm {
         </div>
       </div>
 
-      <h2>What can I do differently?</h2>
-      <p>Show me people who came to <strong>event 2</strong>, then came to <strong>event 6</strong>.</p>
-      <p>Show me people who have <strong>"XYZ"</strong> interests, background, <strong>X</strong> money spent, <strong>X</strong> ticket purchased email etc.</p>
-      <p>Show me which marketing channel produce the <strong>most valuable attendees.</strong></p>
-      <p>Show me <strong>the total value I can expect to receive</strong> in the long term <strong>from previous attendee trends.</strong></p>
+      <h2>What can you do differently?</h2>
+      <p>You can see people who came to <strong>event 2</strong>, then came to <strong>event 6</strong>.</p>
+      <p>You can see people who have <strong>"XYZ"</strong> interests, background, <strong>X</strong> money spent, <strong>X</strong> ticket purchased email etc.</p>
+      <p>You can see which marketing channel produce the <strong>most valuable attendees.</strong></p>
+      <p>You can see <strong>the total value you can expect to receive</strong> in the long term <strong>from previous attendee trends.</strong></p>
     </div>
   </div>
 </div>
@@ -997,7 +997,7 @@ input#saveForm {
             </div>
 
             <div class="pricing-cell">
-              <h4><span>1</span> User Accounts</h4>
+              <h4><span>1</span> User Account</h4>
             </div>
 
             <div class="pricing-cell">
